# arm-reference-solutions-build-scripts

./: README.md  build-all.sh  build-android.sh  build-buildroot.sh  build-ddk.sh  build-debian-ddk.sh  build-debian.sh  build-deepin.sh  build-flash-image.sh  build-hafnium.sh  build-linux.sh  build-ml-app.sh  build-optee-os.sh  build-optee-test.sh  build-rss-trusty.sh  build-rss.sh  build-scp.sh  build-tfa-trusty.sh  build-tfa.sh  build-trusted-services.sh  build-trusty.sh  build-u-boot.sh  create-virtIO-img.sh  create_android_image.sh  create_mmc_deepin_image.sh  create_mmc_image.sh  dependencies.txt  envsetup.sh  fetch-debian.sh  framework.sh  parse_params.sh  requirements.sh  run_docker.sh  setup.sh
config/: common.config  debian_ddk.config  ml.config  tc2.config
docker/: .dockerignore  Dockerfile  entrypoint.sh  requirements.sh
docs/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
docs/totalcompute/: conf.py  index.rst  readme.rst
docs/totalcompute/tc2/: change-log.rst  expected-test-results.rst  index.rst  index_old_tc_releases.rst  index_previous_tc_releases.rst  readme.rst  release_notes.rst  tc2_sw_stack.rst  troubleshooting.rst  user-guide.rst
files/buildroot/: S09modload  busybox_netcat.cfg  defconfig  fit-image-fpga.its  fit-image.its  fstab  post-build.sh  sshd_config  test_feats_arch.sh  test_mpmm.sh  testing_mpam.sh
files/buildroot/external_packages/: Config.in  external.desc  external.mk
files/debian/tc2/: README-debian.md  run_weston.sh
files/hafnium/tc2/: 0001-feat-emulate-cntp-timer-register-accesses-using-cnth.patch  0002-feat-emulate-interrupt-controller-register-access.patch
files/kernel/tc2/: 0041-HACK-Force-virtio-to-use-DMA-API.patch  0042-HACK-enable-restricted-dma.patch  0043-HACK-arm64-dts-Add-pvm-firmware-node-into-foundation.patch  0044-HACK-Install-a-trampoline-instruction-into-pvmfw-mem.patch  0045-fixup-KVM-arm64-pkvm-Plug-in-cache-invalidation-for-.patch  0046-fixup-KVM-arm64-Call-__pkvm_host_share_guest-on-memo.patch  0047-fixup-KVM-arm64-Prepare-EL2-guest-stage-2-page-table.patch  0048-KVM-arm64-prevent-migration-while-setting-up-pKVM.patch  0049-KVM-arm64-pkvm-Handle-AA64ISAR2-read.patch  0050-KVM-arm64-Introduce-IOMMU-driver-infrastructure.patch  0051-KVM-arm64-pkvm-Add-TLB-flush-callbacks-to-kvm_iommu_.patch  0052-KVM-arm64-pkvm-Add-__pkvm_dev_set_owner-hypercall.patch  0053-iommu-arm-smmu-v3-Extract-driver-specific-bits-from-.patch  0054-iommu-arm-smmu-v3-Move-probe-functions-to-arm-smmu-v.patch  0055-iommu-arm-smmu-v3-Move-queue-and-table-allocation-to.patch  (+60 more)
files/ml_app/linux/: .gitignore  CMakeLists.txt  LICENSE  Readme.md
files/ml_app/linux/scripts/cmake/: CMakePolicies.cmake  ProjectDefaults.cmake
files/ml_app/linux/scripts/cmake/toolchains/: aarch64-gnu.cmake
files/tfa/: generate_metadata.py
(+125 files in other folders)
